# ALS

./: .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  railway.toml
data/: erik_config.json
data/seed/: drug_design_targets.json  interventions.json  layer_a_root_cause.json  layer_b_pathology.json  layer_c_circuit.json  layer_d_regeneration.json  layer_e_maintenance.json
docs/: OPS.md
docs/plans/: 2026-03-25-phase0-canonical-substrate.md  2026-03-25-phase1a-evidence-seed.md  2026-03-25-phase1b-evidence-connectors.md  (+4 more)
scripts/: monitor.py  run_loop.py
scripts/api/: auth.py  (+1 more)
tests/: conftest.py  test_adversarial.py  test_als_targets.py  test_api_graph.py  test_audit_log.py  test_auth_middleware.py  test_base_connector.py  test_base_envelope.py  test_biorxiv_connector.py  test_causal_chains.py  test_chembl_connector.py  test_claude_client.py  test_clinical_trials_connector.py  test_clinvar_connector.py  test_cmap_connector.py  test_cognitive_engine_e2e.py  test_combination_analyzer.py  test_compound_daemon.py  test_confidence_updater.py  test_config_loader.py  test_convergence.py  test_counterfactual_check.py  test_daemon_startup.py  test_db_pool.py  test_db_schema.py  test_deep_mode_hypotheses.py  test_deep_mode_stagnation.py  test_discoveries_api.py  test_disgenet_connector.py  test_document_upload_api.py  test_drugbank_connector.py  test_dual_llm.py  test_eligibility.py  test_entity_extractor_relationships.py  test_enums.py  test_episode_logger.py  test_erik_trajectory.py  test_evidence_models.py  test_evidence_store.py  test_evidence_strength.py  (+69 more)
(+180 files in other folders)
