[project]
name = "erik"
version = "0.1.0"
description = "Autonomous causal research and cure-protocol engine for ALS"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10",
    "psycopg[binary]>=3.2",
    "psycopg_pool>=3.2",
    "pytest>=8.0",
    "python-dateutil>=2.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]
markers = [
    "network: marks tests that require network access (deselect with '-m \"not network\"')",
]
